Renamed Eraser button

--- a/whiteboard.html
+++ b/whiteboard.html
@@ -10,7 +10,7 @@
     <div class="canvas-container">
         <div class="button-container">
             <button id="penButton">Pen</button>
-            <button id="eraserButton">Eraser (TODO)</button>
+            <button id="eraserButton">Eraser</button>
         </div>
         <canvas id="drawingCanvas" width="400" height="400" style="border:1px solid #000000;"></canvas>
         <button id="clearCanvas">Clear</button>
