--- a/whiteboard.html
+++ b/whiteboard.html
@@ -9,7 +9,7 @@
 <body>    
     <div class="canvas-container">
         <div class="button-container">
-            <button id="penButton">Pen (test)</button>
+            <button id="penButton">Pen</button>
             <button id="eraserButton">Eraser</button>
         </div>
         <canvas id="drawingCanvas" width="400" height="400" style="border:1px solid #000000;"></canvas>
