--- a/whiteboard.html
+++ b/whiteboard.html
@@ -14,7 +14,7 @@
         </div>
         <canvas id="drawingCanvas" width="400" height="400" style="border:1px solid #000000;"></canvas>
         <button id="clearCanvas">Clear</button>
-    </div>
+        <div id="debugText" style="position: absolute; bottom: 10px; right: 10px; color: black;"></div>
 
     <script src="script.js"></script>
 </body>
